[package]
name = "tree-sitter-desktop"
description = "Desktop grammar for tree-sitter"
version = "1.1.0"
authors = ["Omar Valdez <omarantoniovaldezf2@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "desktop"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/valdezfomar/tree-sitter-desktop"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "/LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.26.3"
